--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,19 @@
-# Eclipse Stuff
-.settings/
-target/
+# Java
+*.class
 
-.project
+# Eclipse IDE
+.settings/
+bin/
 .classpath
+.project
+
+# IntelliJ IDEA
+.idea/
+*.iml
+
+# Maven
+target/
+dependency-reduced-pom.xml
+
+# Other Files
+Backup/
