--- a/pom.xml
+++ b/pom.xml
@@ -1,48 +1,112 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project>
+    <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
+    
+    <groupId>com.SirBlobman</groupId>
+    <artifactId>DiscoArmor</artifactId>
+    <version>3.0.0-SNAPSHOT</version>
+    
+    <name>Disco Armor</name>
+    <description>Warning: If you are prone to epilepsy or seizures, do not use this armor!</description>
+    <url>https://www.spigotmc.org/resources/60700/</url>
+    
+    <properties>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        
+        <spigot.version>1.13.2-R0.1-SNAPSHOT</spigot.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        
+        <bukkit.plugin.name>${project.artifactId}</bukkit.plugin.name>
+        <bukkit.plugin.prefix>${project.name}</bukkit.plugin.prefix>
+        <bukkit.plugin.description>${project.description}</bukkit.plugin.description>
+        
+        <bukkit.plugin.main>com.SirBlobman.disco.armor.DiscoArmorPlugin</bukkit.plugin.main>
+        <bukkit.plugin.version>3.0.0</bukkit.plugin.version>
+        <bukkit.plugin.author>SirBlobman</bukkit.plugin.author>
+    </properties>
+    
+    <repositories>
+        <!-- SpigotMC Repository -->
+        <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository>
 
-	<modelVersion>4.0.0</modelVersion>
-	
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.build.targetEncoding>UTF-8</project.build.targetEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-	</properties>
+        <!-- CodeMC Public Repository -->
+        <repository>
+            <id>codemc-repo</id>
+            <url>https://repo.codemc.io/repository/maven-public/</url>
+        </repository>
 
-	<groupId>com.SirBlobman</groupId>
-	<artifactId>DiscoArmor</artifactId>
-	<version>2.1</version>
+        <!-- CodeMC NMS Repository -->
+        <repository>
+            <id>nms-repo</id>
+            <url>https://repo.codemc.io/repository/nms/</url>
+        </repository>
+    </repositories>
+    
+    <dependencies>
+        <!-- Spigot API -->
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>${spigot.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
-	<name>Disco Armor</name>
-	<description>Warning: If you are prone to epilepsy, do not use this armor</description>
+        <!-- SirBlobmanAPI -->
+        <dependency>
+            <groupId>com.SirBlobman.api</groupId>
+            <artifactId>SirBlobmanAPI</artifactId>
+            <version>1.13-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+    
+    <build>
+        <finalName>${bukkit.plugin.name}-${bukkit.plugin.version}</finalName>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.spigotmc</groupId>
-			<artifactId>spigot-api</artifactId>
-			<version>1.8.8-R0.1-SNAPSHOT</version>
-			<scope>provided</scope>
-		</dependency>
-	</dependencies>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.2</version>
 
-	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-				<includes>
-					<include>plugin.yml</include>
-				</includes>
-			</resource>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>false</filtering>
-				<excludes>
-					<exclude>plugin.yml</exclude>
-				</excludes>
-			</resource>
-		</resources>
-	</build>
+                <configuration>
+                    <relocations>
+                        <relocation>
+                            <pattern>com.SirBlobman.api</pattern>
+                            <shadedPattern>com.SirBlobman.disco.armor.api.shaded</shadedPattern>
+                        </relocation>
+                    </relocations>
+
+                    <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>META-INF/*</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>
+                </configuration>
+
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
