--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -25,3 +25,4 @@ messages:
   not-player: "&cOnly players can use this command."
   prevent-click: "&cYou are not allowed to remove your disco armor."
   change-type: "&aYou changed your armor type to &c{type}&a."
+  command-usage: "&f/disco-armor on/off/menu"
