--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
     
-    <groupId>com.SirBlobman</groupId>
+    <groupId>com.SirBlobman.plugin</groupId>
     <artifactId>DiscoArmor</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>4.0.0-SNAPSHOT</version>
     
     <name>Disco Armor</name>
     <description>Warning: If you are prone to epilepsy or seizures, do not use this armor!</description>
@@ -12,10 +12,10 @@
     
     <properties>
         <java.version>1.8</java.version>
+        <spigot.version>1.13.2-R0.1-SNAPSHOT</spigot.version>
+
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        
-        <spigot.version>1.13.2-R0.1-SNAPSHOT</spigot.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         
         <bukkit.plugin.name>${project.artifactId}</bukkit.plugin.name>
@@ -23,7 +23,7 @@
         <bukkit.plugin.description>${project.description}</bukkit.plugin.description>
         
         <bukkit.plugin.main>com.SirBlobman.disco.armor.DiscoArmorPlugin</bukkit.plugin.main>
-        <bukkit.plugin.version>3.0.4</bukkit.plugin.version>
+        <bukkit.plugin.version>4.0.0</bukkit.plugin.version>
         <bukkit.plugin.author>SirBlobman</bukkit.plugin.author>
     </properties>
     
@@ -39,12 +39,6 @@
             <id>codemc-repo</id>
             <url>https://repo.codemc.io/repository/maven-public/</url>
         </repository>
-
-        <!-- CodeMC NMS Repository -->
-        <repository>
-            <id>nms-repo</id>
-            <url>https://repo.codemc.io/repository/nms/</url>
-        </repository>
     </repositories>
     
     <dependencies>
@@ -56,12 +50,12 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- SirBlobmanAPI -->
+        <!-- SirBlobmanCore -->
         <dependency>
             <groupId>com.SirBlobman.api</groupId>
-            <artifactId>SirBlobmanAPI</artifactId>
-            <version>1.13-SNAPSHOT</version>
-            <scope>compile</scope>
+            <artifactId>core</artifactId>
+            <version>2.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     
@@ -73,40 +67,5 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
-
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.2</version>
-
-                <configuration>
-                    <relocations>
-                        <relocation>
-                            <pattern>com.SirBlobman.api</pattern>
-                            <shadedPattern>com.SirBlobman.disco.armor.api.shaded</shadedPattern>
-                        </relocation>
-                    </relocations>
-
-                    <filters>
-                        <filter>
-                            <artifact>*:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/*</exclude>
-                            </excludes>
-                        </filter>
-                    </filters>
-                </configuration>
-
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
     </build>
 </project>
