--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,6 @@
+# Should the plugin be allowed to check for updates?
+update-checker: true
+
 # How long (in ticks) should the time be between color changes?
 # 1 = once per tick
 # 20 = once per second
@@ -20,15 +23,6 @@ lore:
   - "&7but you can only remove it by"
   - "&7typing &e/disco-armor off&7."
 
-# Setting a message to "" or '' will prevent it from being sent.
-# DO NOT remove any message paths from this config.
-messages:
-  enable-broadcast: "&b&ki&1&lD&2&lI&3&lS&4&lC&5&lO&b&ki&r"
-  disable-broadcast: "&4&l:(&r"
-  not-player: "&cOnly players can use this command."
-  prevent-click: "&cYou are not allowed to remove your disco armor."
-  change-type: "&aYou changed your armor type to &c{type}&a."
-  command-usage: "&f/disco-armor on/off/menu/glow"
-  reload-success: "&aSuccessfully reloaded the config.yml for Disco Armor."
-  enable-glow: "&aSuccessfully enabled your armor glow effect."
-  disable-glow: "&aSuccessfully disabled your armor glow effect."
+broadcast:
+  enabled: "&b&ki&1&lD&2&lI&3&lS&4&lC&5&lO&b&ki&r"
+  disabled: "&4&l:(&r"
