--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
             <artifactId>core</artifactId>
             <version>2.0-SNAPSHOT</version>
             <scope>provided</scope>
+            <classifier>shaded</classifier>
         </dependency>
     </dependencies>
     
