Update POM and overview text.

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <version>2.0-SNAPSHOT</version>
             <scope>provided</scope>
             <classifier>shaded</classifier>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
     
