--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
     
-    <groupId>com.SirBlobman.plugin</groupId>
-    <artifactId>DiscoArmor</artifactId>
-    <version>4.0.0-SNAPSHOT</version>
+    <groupId>com.github.sirblobman</groupId>
+    <artifactId>disco-armor</artifactId>
+    <version>5.0.0-SNAPSHOT</version>
     
     <name>Disco Armor</name>
     <description>Warning: If you are prone to epilepsy or seizures, do not use this armor!</description>
@@ -18,12 +18,12 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         
-        <bukkit.plugin.name>${project.artifactId}</bukkit.plugin.name>
+        <bukkit.plugin.name>DiscoArmor</bukkit.plugin.name>
         <bukkit.plugin.prefix>${project.name}</bukkit.plugin.prefix>
         <bukkit.plugin.description>${project.description}</bukkit.plugin.description>
         
-        <bukkit.plugin.main>com.SirBlobman.disco.armor.DiscoArmorPlugin</bukkit.plugin.main>
-        <bukkit.plugin.version>4.0.0</bukkit.plugin.version>
+        <bukkit.plugin.main>com.github.sirblobman.disco.armor.DiscoArmorPlugin</bukkit.plugin.main>
+        <bukkit.plugin.version>5.0.0</bukkit.plugin.version>
         <bukkit.plugin.author>SirBlobman</bukkit.plugin.author>
     </properties>
     
@@ -52,22 +52,16 @@
 
         <!-- SirBlobmanCore -->
         <dependency>
-            <groupId>com.SirBlobman.api</groupId>
+            <groupId>com.github.sirblobman.api</groupId>
             <artifactId>core</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>2.1-SNAPSHOT</version>
             <scope>provided</scope>
-            <classifier>shaded</classifier>
-            <exclusions>
-                <exclusion>
-                    <groupId>*</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
     </dependencies>
     
     <build>
         <finalName>${bukkit.plugin.name}-${bukkit.plugin.version}</finalName>
+        <defaultGoal>clean install</defaultGoal>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
