--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,6 @@
-<project>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
     
@@ -11,8 +13,8 @@
     <url>https://www.spigotmc.org/resources/60700/</url>
     
     <properties>
-        <java.version>16</java.version>
-        <spigot.version>1.17.1-R0.1-SNAPSHOT</spigot.version>
+        <java.version>17</java.version>
+        <spigot.version>1.19-R0.1-SNAPSHOT</spigot.version>
 
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -24,7 +26,7 @@
         <bukkit.plugin.description>${project.description}</bukkit.plugin.description>
         
         <bukkit.plugin.main>com.github.sirblobman.disco.armor.DiscoArmorPlugin</bukkit.plugin.main>
-        <bukkit.plugin.version>6.0.1</bukkit.plugin.version>
+        <bukkit.plugin.version>6.0.2</bukkit.plugin.version>
         <bukkit.plugin.author>SirBlobman</bukkit.plugin.author>
     </properties>
     
@@ -47,7 +49,7 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>21.0.1</version>
+            <version>23.0.0</version>
             <scope>provided</scope>
         </dependency>
 
@@ -63,7 +65,7 @@
         <dependency>
             <groupId>com.github.sirblobman.api</groupId>
             <artifactId>core</artifactId>
-            <version>2.2-SNAPSHOT</version>
+            <version>2.4-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -84,7 +86,8 @@
     
     <build>
         <finalName>${bukkit.plugin.name}-${bukkit.plugin.version}</finalName>
-        <defaultGoal>clean install</defaultGoal>
+        <defaultGoal>clean package</defaultGoal>
+
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
