--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
-    
+
     <groupId>com.github.sirblobman</groupId>
     <artifactId>disco-armor</artifactId>
     <version>6.0.0-SNAPSHOT</version>
-    
+
     <name>Disco Armor</name>
     <description>Warning: If you are prone to epilepsy or seizures, do not use this armor!</description>
     <url>https://www.spigotmc.org/resources/60700/</url>
-    
+
     <properties>
         <java.version>17</java.version>
         <spigot.version>1.19.2-R0.1-SNAPSHOT</spigot.version>
@@ -20,16 +20,16 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler.release>${java.version}</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        
+
         <bukkit.plugin.name>DiscoArmor</bukkit.plugin.name>
         <bukkit.plugin.prefix>${project.name}</bukkit.plugin.prefix>
         <bukkit.plugin.description>${project.description}</bukkit.plugin.description>
-        
+
         <bukkit.plugin.main>com.github.sirblobman.disco.armor.DiscoArmorPlugin</bukkit.plugin.main>
-        <bukkit.plugin.version>6.2.0</bukkit.plugin.version>
+        <bukkit.plugin.version>6.2.1</bukkit.plugin.version>
         <bukkit.plugin.author>SirBlobman</bukkit.plugin.author>
     </properties>
-    
+
     <repositories>
         <!-- SpigotMC Repository -->
         <repository>
@@ -43,7 +43,7 @@
             <url>https://nexus.sirblobman.xyz/repository/public/</url>
         </repository>
     </repositories>
-    
+
     <dependencies>
         <!-- JetBrains Annotations -->
         <dependency>
@@ -65,31 +65,25 @@
         <dependency>
             <groupId>com.github.sirblobman.api</groupId>
             <artifactId>core</artifactId>
-            <version>2.5-SNAPSHOT</version>
+            <version>2.6-SNAPSHOT</version>
             <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>*</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
     </dependencies>
-    
+
     <distributionManagement>
         <!-- SirBlobman Releases -->
         <repository>
             <id>sb-public-releases</id>
             <url>https://nexus.sirblobman.xyz/repository/public-releases/</url>
         </repository>
-        
+
         <!-- SirBlobman Snapshots -->
         <snapshotRepository>
             <id>sb-public-snapshots</id>
             <url>https://nexus.sirblobman.xyz/repository/public-snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
-    
+
     <build>
         <finalName>${bukkit.plugin.name}-${bukkit.plugin.version}</finalName>
         <defaultGoal>clean package</defaultGoal>
