--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,17 +1,17 @@
-name: "${bukkit.plugin.name}"
-prefix: "${bukkit.plugin.prefix}"
-description: "${bukkit.plugin.description}"
-website: "${project.url}"
+name: "${pluginName}"
+prefix: "${pluginPrefix}"
+description: "${pluginDescription}"
+website: "${pluginWebsite}"
 
-main: "${bukkit.plugin.main}"
-version: "${bukkit.plugin.version}"
+main: "${pluginMainClass}"
+version: "${pluginVersion}"
 api-version: "1.18"
 
 depend:
   - "BlueSlimeCore"
 
 authors:
-  - "${bukkit.plugin.author}"
+  - "SirBlobman"
 
 commands:
   disco-armor:
