Code Cleanup + Add Folia Support

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,11 +7,13 @@ main: "${pluginMainClass}"
 version: "${pluginVersion}"
 api-version: "1.18"
 
-depend:
-  - "BlueSlimeCore"
+folia-supported: true
 
 authors:
   - "SirBlobman"
+
+depend:
+  - "BlueSlimeCore"
 
 commands:
   disco-armor:
