--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version.base=6.3.0
-version.beta=false
+version.base=6.4.0
+version.beta=true
 
 bukkit.plugin.name=DiscoArmor
 bukkit.plugin.prefix=Disco Armor
