--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 version.base=6.4.0
 version.beta=true
-
+spigot.version=1.18.2-R0.1-SNAPSHOT
 bukkit.plugin.name=DiscoArmor
 bukkit.plugin.prefix=Disco Armor
 bukkit.plugin.description=Warning: If you are prone to epilepsy or seizures, do not use this armor!
