--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 version.base=6.4.0
-version.beta=true
+version.beta=false
 spigot.version=1.18.2-R0.1-SNAPSHOT
 bukkit.plugin.name=DiscoArmor
 bukkit.plugin.prefix=Disco Armor
